# exchangeable-hierarchical-partition-package

./: README.txt  correct-by-slow.R  correct-by-slow.rs  crp-size-distribution.R  demo.R  demo.Rout  experiment.R  explore-size-configurations-more.R  explore-size-configurations.R  extended-gupd.R  ghupd.R  ghupd.Rout  ide  sizes2.R
drawingboard/: allpossible.R  bill.R  bob.R  lisa.R  mac.R
gupd/: DESCRIPTION  NAMESPACE  NEWS
gupd/R/: entropy.R  experiment.R  ghupd.R  initial_state_r.R  make_gupd.R  rgup.R  rsizes.R  sizes.R
gupd/man/: entropy.Rd  experiment.Rd  gupd-package.Rd  make_gupd.Rd
gupd/src/: shim.c
gupd/src/rust/: Cargo.toml
gupd/src/rust/src/: ghupd.rs  lib.rs
xhp/: DESCRIPTION  NAMESPACE
xhp/R/: ghupd.R  xhp.R
xhp/man/: make_gupd.Rd  xhp-package.Rd
xhp/src/: shim.c
xhp/src/rust/: Cargo.toml
xhp/src/rust/src/: ghupd.rs  lib.rs  xhp.rs
