[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.81.0"

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
ahash = "0.8.11"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
roxido = { path="roxido" }
statrs = "0.18.0"
use = "0.0.1-pre.0"
# roxido_faer = { path="roxido_faer" }

